--- a/buy-sus-app/app.yaml
+++ b/buy-sus-app/app.yaml
@@ -15,3 +15,12 @@
 # [START gae_quickstart_yaml]
 runtime: nodejs14
 # [END gae_quickstart_yaml]
+handlers:
+# Serve all static files with url ending with a file extension
+- url: /(.*\..+)$
+  static_files: build/\1
+  upload: build/(.*\..+)$
+# Catch all handler to index.html
+- url: /.*
+  static_files: build/index.html
+  upload: build/index.html
